# pi-benchmark

./: .gitignore  README.md  bench_common.py  config.yaml  pyproject.toml  run.sh  run_remaining.sh  split_utils.py  train_v2.py
cpu_latency/: .gitignore  README.md  adapter_compile.py  adapter_ctranslate2.py  adapter_executorch.py  adapter_ipex.py  adapter_llamacpp.py  adapter_onnx.py  adapter_openvino.py  adapter_pytorch.py  adapter_tflite.py  bench.py  conversions.py  design.md  heads.py  pyproject.toml  runtimes.py
latency_cuda/: .gitignore  README.md  REPORT.md  pyproject.toml  run.sh
latency_cuda/scripts/: download.py  rebuild_json_from_log.py  smoke_test.py
latency_cuda/src/: bench.py  models.py
quantization_study/: .gitignore  README.md  _adapters.py  design.md  make_figures.py  pyproject.toml  run_accuracy.py  run_latency.py
results/: SUMMARY.md  benchmark_results.json
scripts/: aggregate_sweep.py  check_coverage.py  classifiers.py  config.py  datasets.py  eval_trained.py  evaluation.py  lightweight_sweep.sh  report.py  run_benchmark.py  setup_data.sh  traditional_ml.py
