[project]
name = "pi-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "pandas",
    "tabulate",
    "safetensors",
    "huggingface-hub",
    "sentence-transformers",
    "onnxruntime",
    "tokenizers",
    "pyyaml>=6.0",
    "simple-defender-py",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "sentencepiece>=0.2.1",
]

[tool.uv.sources]
# Public, Apache-2.0. Pinned to a specific commit so clones on other machines
# resolve to the same artifact. Bump when upstream moves.
simple-defender-py = { git = "https://github.com/LuxxxLucy/simple-defender-py", rev = "4c405f0" }

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
