[project]
name = "pi-latency-cuda"
version = "0.1.0"
description = "Latency benchmark for lightweight classifiers on Linux + CUDA"
requires-python = ">=3.11"
# torch pinned <2.7 to stay on default-PyPI cu124 wheels (works with driver
# CUDA 12.4+). 2.7 ships cu126, 2.8 ships cu128 — both need newer drivers.
dependencies = [
    "torch>=2.5,<2.7",
    "transformers>=4.51",
    "huggingface-hub>=0.24",
    "numpy",
    "sentencepiece>=0.2",
    "tiktoken",
    "protobuf",
    "accelerate>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
