[project]
name = "pi-latency-cuda"
version = "0.1.0"
description = "Latency benchmark for lightweight classifiers on Linux + CUDA"
requires-python = ">=3.11"
# torch hard-pinned to 2.6.0 — default-PyPI cu124 wheel, works with the
# 3090's driver CUDA 12.5. Same version pinned in parent pi-benchmark
# pyproject.toml so both sub-projects resolve to the identical torch.
dependencies = [
    "torch==2.6.0",
    "transformers>=4.51",
    "huggingface-hub>=0.24",
    "numpy",
    "sentencepiece>=0.2",
    "tiktoken",
    "protobuf",
    "accelerate>=0.30",
    "einops>=0.8",          # required by nomic-embed custom modeling code
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
